project-16-kubernetes-security-container-hardening-platform/kubernetes/pod-security.yaml
apiVersion: v1
kind: Pod

metadata:
  name: secure-pod

spec:

  securityContext:
    runAsNonRoot: true

  containers:

  - name: secure-container

    image: secure-java-app:v1

    securityContext:
      privileged: false
      readOnlyRootFilesystem: true
