project-16-kubernetes-security-container-hardening-platform/kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: application-policy
  namespace: secure-production

spec:

  podSelector: {}

  policyTypes:
    - Ingress
    - Egress
